force-app/main/default/objects/Property__c/fields/Available_Flag__c.field-meta.xml
<CustomField>
    <fullName>Available_Flag__c</fullName>
    <formula
  >IF( ISPICKVAL(Status__c , &quot;Available&quot;) , 1 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>