force-app/main/default/objects/Property__c/validationRules/Property_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Location_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Location__c),
    NOT($Setup.Test_Config__c.Bypass_Automations__c)
)</errorConditionFormula>
    <errorMessage>Location is required for all properties</errorMessage>
</ValidationRule>